BUGFIX: Re-Introduce the auto-width siteHeader BrandLogo to fix spacings in the mobile menu

--- a/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Organisms/_SiteHeader.scss
+++ b/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/Organisms/_SiteHeader.scss
@@ -35,6 +35,8 @@
 	left: 1.5em;
 	z-index: 1;
 	transform: translateY(-50%);
+	width: auto;
+	max-width: 200px; // Max-width is needed since IE goes crazy with auto-width svg's.
 	height: 30px;
 	fill: currentColor;
 	transition: all .3s ease;
