--- a/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/_Variables.scss
+++ b/Packages/Sites/Neos.NeosIo/Resources/Private/Scss/_Variables.scss
@@ -25,19 +25,6 @@ $brand-font-family: 'Work Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif 
 // If the CD makes use of rounded corners, use this variable for consistency.
 $brand-border-radius: 3px !default;
 
-// If you want to use the image-replacement technique for your brand logo,
-// set the 'image' key to the image-name of your brand logo e.g.:
-// $brand-logo: (image: 'logo.png', width: 200px, height: 200px);
-//
-// Be aware that you need to specify the dimensions of your logo, otherwise it won't be displayed.
-$brand-logos: (
-	white: (
-		image: 'neos-logo.png',
-		width: 330px,
-		height: 160px
-	)
-) !default;
-
 // =============================================================================
 // Base Typesetting
 // =============================================================================
